# dailydigest

./: .pre-commit-config.yaml  README.md  dd_content.py  dd_email.py  dd_gui.py  pyproject.toml  quotes.db  quotes_db.py  tox.ini
